--- a/Хьюстон.html
+++ b/Хьюстон.html
@@ -98,7 +98,7 @@
     <h3 id="Этимология, прозвища">Этимология, прозвища</h3>
     <figure>
       <img
-        src="C:\Users\Hikka\Downloads\Хьюстон - картинки\Sam_Houston_portrait.jpg"
+        src=".\Sam_Houston_portrait.jpg"
       />
       <figcaption>Сэмюэл Хьюстон</figcaption>
     </figure>
