--- a/Хьюстон.html
+++ b/Хьюстон.html
@@ -123,7 +123,7 @@
     <h3 id="Основание">Основание</h3>
     <figure>
       <img
-        src="C:\Users\Hikka\Downloads\Хьюстон - картинки\Allen's_Landing_Houston_bayou_view.jpg"
+        src=".\Allen's_Landing_Houston_bayou_view.jpg"
       />
       <figcaption>Allen’s Landing — место, где был основан город</figcaption>
     </figure>
@@ -147,7 +147,7 @@
     <h3 id="XX век">XX век</h3>
     <figure>
       <img
-        src="C:\Users\Hikka\Downloads\Хьюстон - картинки\Main_Street_looking_south_Houston_Texas_(1908).jpg"
+        src=".\Main_Street_looking_south_Houston_Texas_(1908).jpg"
       />
       <figcaption>Мэйн-Стрит в центре, 1908 год</figcaption>
     </figure>
@@ -196,7 +196,7 @@
     </h3>
     <figure>
       <img
-        src="C:\Users\Hikka\Downloads\Хьюстон - картинки\Large_Houston_Landsat.jpg"
+        src=".\Large_Houston_Landsat.jpg"
       />
       <figcaption>Хьюстон со спутника Landsat 7</figcaption>
     </figure>
@@ -310,7 +310,7 @@
     <h3 id="Флора и фауна">Флора и фауна</h3>
     <figure>
       <img
-        src="C:\Users\Hikka\Downloads\Хьюстон - картинки\Discovery_green.jpg"
+        src=".\Discovery_green.jpg"
       />
       <figcaption>Парк Discovery green в центре Хьюстона</figcaption>
     </figure>
@@ -460,7 +460,7 @@
     </table>
     <figure>
       <img
-        src="C:\Users\Hikka\Downloads\Хьюстон - картинки\Houston_Ship_Channel.jpg"
+        src=".\Houston_Ship_Channel.jpg"
       />
       <figcaption>Хьюстонский судоходный канал</figcaption>
     </figure>
@@ -501,7 +501,7 @@
     </p>
     <figure>
       <img
-        src="C:\Users\Hikka\Downloads\Хьюстон - картинки\Enron_Complex.jpg"
+        src=".\Enron_Complex.jpg"
       />
       <figcaption>Офис компании Chevron в Хьюстоне</figcaption>
     </figure>
@@ -536,7 +536,7 @@
     <h3 id="Авиакосмическая промышленность">Авиакосмическая промышленность</h3>
     <figure>
       <img
-        src="C:\Users\Hikka\Downloads\Хьюстон - картинки\Aerial_View_of_the_Johnson_Space_Center.jpg"
+        src=".\Aerial_View_of_the_Johnson_Space_Center.jpg"
       />
       <figcaption>Космический центр им. Джонсона</figcaption>
     </figure>
@@ -673,7 +673,7 @@
     1850-2017 Переписи населения в 1790—2010 годах
     <figure>
       <img
-        src="C:\Users\Hikka\Downloads\Хьюстон - картинки\Race_and_ethnicity_2010_Houston.png"
+        src=".\Race_and_ethnicity_2010_Houston.png"
       />
       <figcaption>Этническая карта Хьюстона</figcaption>
     </figure>
@@ -727,7 +727,7 @@
     <h2 id="Средства массовой информации">Средства массовой информации</h2>
     <figure>
       <img
-        src="C:\Users\Hikka\Downloads\Хьюстон - картинки\Melcher_Center_for_Public_Broadcasting.jpg"
+        src=".\Melcher_Center_for_Public_Broadcasting.jpg"
       />
       <figcaption>
         Вещательный центр, откуда вещают радиостанции KUHT и KUHF
